src/k3s/drone/drone.digitalocean_runner.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone-digitalocean-runner
  name: drone-digitalocean-runner
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-digitalocean-runner
  template:
    metadata:
      labels:
        app: drone-digitalocean-runner
    spec:
      serviceAccountName: drone-runner
      containers:
      - image: ${DIGITALOCEAN_RUNNER_IMAGE}
        name: drone-digitalocean-runner
        volumeMounts:
          - name: config
            mountPath: /data/drone/conf
      volumes:
        - name: config
          secret:
            secretName: drone
            items:
              - key: id_rsa.pub.yaml
                path: id_rsa.pub
              - key: id_rsa.yaml
                path: id_rsa
