src/k3s/drone/drone.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
    app: drone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone
  name: drone
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
      - image: ${DRONE_IMAGE}
        name: drone
        volumeMounts:
          - name: data
            mountPath: /data
        ## debug:
        ## command: ["/bin/sh", "-c", "sleep 99999999999"]
        ports:
        - containerPort: 80
          name: web
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: drone-data
