src/k3s/drone/drone.ingress.template.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drone
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`${DOMAIN}`)
    services:
    - name: drone
      port: 80
  tls:
    certResolver: default
